Add autocomplete Select at Note shared

--- a/mom/templates/base.html
+++ b/mom/templates/base.html
@@ -32,7 +32,11 @@
    <!-- =============== APP STYLES ===============-->
    <link rel="stylesheet" href="{% static 'css/app.css' %}" id="maincss' %}">
    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
+   
+   {% block style %}
+      
+   {% endblock style %}
+      
 </head>
 
 <body>
