--- a/mom/templates/base.html
+++ b/mom/templates/base.html
@@ -63,9 +63,7 @@
    <script src="{%static 'vendor/inputmask/dist/jquery.inputmask.bundle.js'%}"></script><!-- WYSIWYG-->
    <script src="{%static 'vendor/select2/dist/js/select2.full.js'%}"></script>
    <script src="{% static 'js/app.js' %}"></script>
-   {% block script %}
-   
-   {% endblock script %}
+   {% block script %}{% endblock script %}
    
  
    <!-- =============== PAGE VENDOR SCRIPTS ===============-->
