--- a/mom/templates/useractivity/index.html
+++ b/mom/templates/useractivity/index.html
@@ -38,8 +38,8 @@
                 </div>
                 <!-- loader end -->
                 <div class="recorder">
-                    <div id="canvas-area"></div>
-                    <div class="text-center"><button class="btn btn-primary " id='record-meeting'>Start
+                    <div id="canvas-area" class="col-md-10 col-sm-10 col-xs-10"></div>
+                    <div class="text-center"><button class="btn btn-primary" id='record-meeting'>Start
                             Meeting</button>&nbsp;
                         <button class="btn btn-danger" id='stop' hidden>End Meeting</button></div>
                 </div>
