--- a/mom/templates/partial/sidebar.html
+++ b/mom/templates/partial/sidebar.html
@@ -54,6 +54,8 @@
             <ul class="sidebar-nav">
                <!-- START user info-->
                <li class="has-user-block">
+                  <a href="{% url 'useractivity:profile' %}">
+                     
                   <div class="collapse" id="user-block">
                      <div class="item user-block">
                         <!-- User picture-->
@@ -63,16 +65,18 @@
                               <div class="circle bg-success circle-lg"></div>
                            </div>
                         </div><!-- Name and Job-->
-                        <div class="user-block-info"><span class="user-block-name">Hello, {{ user.first_name|title }}</span><span
-                              class="user-block-role">
-                           {% if user.profile.designation %}
-                              {{ user.profile.designation }}
-                           {% else %}
-                              Designation Not Found
-                           {% endif %}
-                           </span></div>
+                        <div class="user-block-info"><span class="user-block-name">Hello, {{ user.first_name|title }}</span>
+                           <span class="user-block-role">
+                              {% if user.profile.designation %}
+                                 {{ user.profile.designation }}
+                              {% else %}
+                                 <!-- Designation Not Found -->
+                              {% endif %}
+                           </span>
+                        </div>
                      </div>
                   </div>
+               </a>
                </li><!-- END user info-->
                <!-- Iterates over all sidebar items-->
                <li class="nav-heading "><span data-localize="sidebar.heading.HEADER">Main Navigation</span></li>
@@ -89,7 +93,7 @@
                <li {% if request.resolver_match.url_name == 'notes' %}class="active"{% endif %}>
                   <a href="{% url 'useractivity:notes' %}">
                      <em class="fas fa-sticky-note"></em>
-                     <span data-localize="sidebar.nav.chart.CHART">Shared Notes</span>
+                     <span data-localize="sidebar.nav.chart.CHART">Notes</span>
                   </a>
                </li>
                <li {% if request.resolver_match.url_name == 'profile' %}class="active"{% endif %}>
