Reset Password template configuration

--- a/mom/templates/registration/password_reset.html
+++ b/mom/templates/registration/password_reset.html
@@ -35,20 +35,22 @@
                      src="{% static 'img/logo-mom.png' %}" alt="Image"></a></div>
             <div class="card-body">
                {% include 'partial/messages.html' %}
-               <p class="text-center py-2">Reset Password</p>
+               <div class="text-center">
+                  <h3><i class="fa fa-lock fa-4x"></i></h3>
+                  <h2 class="text-center">Forgot Password?</h2>
+                  <p>You can reset your password here.</p>
+               </div>
                <form class="mb-3" method="post">
                   {% csrf_token %}
                   {% for field in form %}
                   <div class="form-group">{{field.label}}
                      <div class="input-group with-focus">
-                        <!-- <div class="input-group-append"> -->
                         {{field}}
                         {% if field.errors %}
                         <div class="text text-danger">
                            {{field.errors }}
                         </div>
                         {% endif %}
-                        <!-- </div> -->
                      </div>
                   </div>
                   {% endfor %}
@@ -70,7 +72,11 @@
    <script src="{% static 'vendor/parsleyjs/dist/parsley.js' %}"></script>
    <!-- =============== APP SCRIPTS ===============-->
    <script src="{% static 'js/app.js' %}"></script>
-
+   <script>
+      $(document).ready(function(){
+         $('#id_email').addClass('form-control');
+      });
+   </script>
 </body>
 
 </html>
