--- a/mom/templates/registration/password_reset_done.html
+++ b/mom/templates/registration/password_reset_done.html
@@ -36,9 +36,9 @@
                      src="{% static 'img/logo-mom.png' %}" alt="Image"></a></div>
             <div class="card-body">
                 {% include 'partial/messages.html' %}
-                <p class="text-center py-2">Reset Password</p>
+                <h2><p class="text-center py-2">Reset Password</p></h2>
                 <h4><p>We have sended you reset password link on your email. Please Check Your Email.</p></h4>
-                <h3><a href="{% url 'useractivity:login' %}">Back to Login Page</a></h3>
+                <h4><a href="{% url 'useractivity:login' %}">Back to Login Page</a></h4>
             </div>
          </div><!-- END card-->
       </div>
