--- a/mom/templates/registration/password_reset_complete.html
+++ b/mom/templates/registration/password_reset_complete.html
@@ -1,3 +1,44 @@
-<h2>Reset Password</h2>
+<!-- <h2>Reset Password</h2>
 <h3>Hurray! Your password has been changed.</h3>
-<a href="{% url 'useractivity:login' %}">Click here to Login</a>
+<a href="{% url 'useractivity:login' %}">Click here to Login</a> -->
+{% load static %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="description" content="Bootstrap Admin App">
+        <meta name="keywords" content="app, responsive, jquery, bootstrap, dashboard, admin">
+        <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
+        <title>MOM | Reset Password </title><!-- =============== VENDOR STYLES ===============-->
+        <!-- FONT AWESOME-->
+        <link rel="stylesheet" href="{% static 'vendor/@fortawesome/fontawesome-free/css/brands.css' %}">
+        <link rel="stylesheet" href="{% static 'vendor/@fortawesome/fontawesome-free/css/regular.css' %}">
+        <link rel="stylesheet" href="{% static 'vendor/@fortawesome/fontawesome-free/css/solid.css' %}">
+        <link rel="stylesheet" href="{% static 'vendor/@fortawesome/fontawesome-free/css/fontawesome.css' %}">
+        <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" id="bscss' %}">
+        <!-- =============== APP STYLES ===============-->
+        <link rel="stylesheet" href="{% static 'css/app.css' %}" id="maincss' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    </head>
+    <body>
+        <div class="wrapper">
+            <div class="block-center mt-4 wd-xl">
+               <!-- START card-->
+               <div class="card card-flat">
+                  <div class="card-header text-center bg-info"><a href="#"><img class="block-center rounded"
+                           src="{% static 'img/logo-mom.png' %}" alt="Image"></a></div>
+                  <div class="card-body">
+                     {% include 'partial/messages.html' %}
+                     <div class="text-center">
+                        <h2 class="text-center">Reset Password?</h2>
+                        <h4><p>Hurray! Your password has been changed.</p></h4>
+                        <h4><a href="{% url 'useractivity:login' %}">Click here to Login</a></h4>
+                     </div>
+                  </div>
+               </div><!-- END card-->
+               <!-- <div class="p-3 text-center"><span class="mr-2">&copy;</span><span>2019</span><span class="mr-2">-</span><span>Angle</span><br><span>Bootstrap Admin Template</span></div> -->
+            </div>
+         </div><!-- =============== VENDOR SCRIPTS ===============-->
+    </body>
+</html>
