--- a/mom/templates/registration/password_reset_confirm.html
+++ b/mom/templates/registration/password_reset_confirm.html
@@ -42,7 +42,6 @@
                   {% for field in form %}
                   <div class="form-group">{{field.label}}
                      <div class="input-group with-focus">
-                        <!-- <div class="input-group-append"> -->
                         {{field}}
                         {% if field.errors %}
                         <div class="text text-danger">
@@ -71,6 +70,12 @@
    <script src="{% static 'vendor/parsleyjs/dist/parsley.js' %}"></script>
    <!-- =============== APP SCRIPTS ===============-->
    <script src="{% static 'js/app.js' %}"></script>
+   <script>
+      $(document).ready(function(){
+         $('#id_new_password1').addClass('form-control');
+         $('#id_new_password2').addClass('form-control');
+      });
+   </script>
 
 </body>
 
